--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker image
+name: Build Docker image
 
 on:
   push:
@@ -9,3 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: node-app:latest
