--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
