--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Echo message
+        run: echo "Changes on main detected, running Docker build"
+        
       - name: Checkout Repo
         uses: actions/checkout@v3
 
