--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Echo message
+        run: echo "Running test for the Pull Request"
+
       - name: Checkout Repo
         uses: actions/checkout@v3
 
